--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -49,4 +50,4 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1"
   }
-} 
+}
