--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -34,13 +35,13 @@
     "cmdk": "^1.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "^15.5.4",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "qr-code-styling": "^1.9.2",
     "qrcode": "^1.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
