feat: add Open Graph image generation and metadata

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-og": "node scripts/generate-og-image.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.2",
