--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "critters": "^0.0.23",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1"
   }
